# submissions-service

./: .gitignore  README.md
backend/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml  schema.sql
backend/.run/: README.md
backend/migrations/: env.py
backend/scripts/: localstack_init.sh  localstack_init_test.sh
backend/src/adapters/inbound/http/: app.py  dependencies.py  exception_handlers.py
backend/src/adapters/inbound/http/routers/: submissions.py
backend/src/adapters/inbound/http/schemas/: submission.py
backend/src/adapters/outbound/postgres/: database.py  models.py
backend/src/adapters/outbound/postgres/repositories/: submission_repo.py
backend/src/adapters/outbound/s3/: storage.py
backend/src/adapters/outbound/sqs/: publisher.py
backend/src/application/use_cases/: create_submission.py  get_submission.py  list_submissions.py  process_submission.py
backend/src/config/: settings.py
backend/src/core/domain/: score.py  submission.py  submission_status.py
backend/src/core/ports/inbound/: use_cases.py
backend/src/core/ports/outbound/: ports.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_api_submissions.py  test_worker.py
backend/tests/unit/domain/: test_score.py  test_submission.py  test_submission_status.py
backend/tests/unit/use_cases/: test_create_submission.py  test_get_submission.py  test_list_submission.py  test_process_submission.py
backend/worker/: consumer.py  main.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: submissions.ts
frontend/src/components/: SubmissionDetail.tsx  SubmissionForm.tsx  SubmissionList.tsx
frontend/src/types/: submission.ts
