[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "submission-service"
version = "0.1.0"
description = "Microservice for discursive answer submission and async correction"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",          # driver assincrono (API + worker)
    "psycopg2-binary>=2.9.0",   # driver sincrono (Alembic migrations)
    "alembic>=1.13.0",

    # Config
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",

    # AWS SDK — SQS (LocalStack/real) + S3 (MinIO/real)
    # Mesmas libs em dev e produção, só endpoint e credenciais mudam
    "boto3>=1.35.0",
    "aioboto3>=13.0.0",
    "botocore>=1.35.0",

    # Utilities
    "python-ulid>=2.7.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "anyio>=4.6.0",
    "freezegun>=1.5.0",
    "factory-boy>=3.3.0",

    # Mock AWS para testes unitários (sem precisar de container)
    "moto[sqs,s3]>=5.0.0",

    # Linting & formatting
    "ruff>=0.7.0",
    "mypy>=1.12.0",
    "boto3-stubs[sqs,s3]>=1.35.0",

    # Pre-commit
    "pre-commit>=4.0.0",
]

# Ruff
[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "worker", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "ANN", # flake8-annotations
    "RUF", # ruff-specific
]
ignore = [
    "ANN101",
    "ANN102",
    "ANN401",
]

[tool.ruff.lint.isort]
known-first-party = ["src", "worker"]

# Mypy
[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = ["migrations/"]

# Pytest
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src",
    "--cov=worker",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=80",
    "-v",
]
markers = [
    "unit: fast tests with no external dependencies",
    "integration: tests that require docker services",
]

# Coverage
[tool.coverage.run]
source = ["src", "worker"]
omit = [
    "*/migrations/*",
    "*/__init__.py",
    "*/config/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.hatch.build.targets.wheel]
packages = ["src", "worker"]